# rocket-sass-fairing

./: Cargo.toml  README.md  Rocket.toml
assets/: style.scss
src/: lib.rs
